--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -807,7 +807,8 @@ header .navbar ul li a:hover {
   position: relative;
   background-color: inherit;
   width: 50%;
-  height: 250px;
+  height: auto;
+  min-height: 250px;
 }
 /*circles on timeline*/
 .ResearchExperience .container::after {
