--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,7 +668,6 @@ header .navbar ul li a:hover {
 /* work section starts */
 .work {
   /* background: #010124; */
-  background: linear-gradient(to bottom, #000031, #00002c);
 }
 .work h2 {
   color: #fff;
@@ -694,7 +693,7 @@ header .navbar ul li a:hover {
 .work .box-container .box img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .work .box-container .box .content {
   height: 100%;
